--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>爱心树表白动画（jQuery+Html5）</title>	    
-    <link type="text/css" rel="stylesheet" href="css/default.css">
+    <link type="text/css" rel="stylesheet" href="default.css">
 		
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jscex.min.js"></script>
-	<script type="text/javascript" src="js/jscex-parser.js"></script>
-	<script type="text/javascript" src="js/jscex-jit.js"></script>
-	<script type="text/javascript" src="js/jscex-builderbase.min.js"></script>
-	<script type="text/javascript" src="js/jscex-async.min.js"></script>
-	<script type="text/javascript" src="js/jscex-async-powerpack.min.js"></script>
-	<script type="text/javascript" src="js/functions.js" charset="utf-8"></script>
-	<script type="text/javascript" src="js/love.js" charset="utf-8"></script>
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jscex.min.js"></script>
+	<script type="text/javascript" src="jscex-parser.js"></script>
+	<script type="text/javascript" src="jscex-jit.js"></script>
+	<script type="text/javascript" src="jscex-builderbase.min.js"></script>
+	<script type="text/javascript" src="jscex-async.min.js"></script>
+	<script type="text/javascript" src="jscex-async-powerpack.min.js"></script>
+	<script type="text/javascript" src="functions.js" charset="utf-8"></script>
+	<script type="text/javascript" src="love.js" charset="utf-8"></script>
 	
 	<style type="text/css">
 		/*.STYLE1 {
@@ -24,7 +24,7 @@
 <body>
 	<!--===音乐：原谅——刘瑞琦======================================-->
 	<audio autoplay>
-			<source src="music/forgive.mp3"/>
+			<source src="forgive.mp3"/>
 	</audio>  
 	
 	<!--==============================================================-->
