--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>爱心树表白动画（jQuery+Html5）</title>	    
+	<title>致芷君同学的七夕礼物（jQuery+Html5）</title>	    
     <link type="text/css" rel="stylesheet" href="default.css">
 		
 	<script type="text/javascript" src="jquery.min.js"></script>
@@ -36,23 +36,23 @@
             <div id="text">
 		        <div id="code">
 		      		<font color="#FF0000">  	
-		      			<span class="say">亲爱的小幸运，我爱你，虽然你看不见我对你的告白</span><br>
+		      			<span class="say">hello,芷君同学</span><br>
 						<span class="say"></span><br>
-						<span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+						<span class="say">虽然，我们认识的时间很短暂</span><br>
 						<span class="say"></span><br>
-			        	<span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
-						<span class="say">因为我太爱你了，所以我失去你了</span><br>
-						<span class="say">因为我太啰嗦了，所以你离开了我</span><br>
-						<span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
+			        	<span class="say">我对你的生活也不了解</span><br>
+						<span class="say">甚至没有见过你本人</span><br>
+						<span class="say">但是，你幽默、风趣、积极、活泼的性格还是深深的吸引了我</span><br>
+						<span class="say">无论结果如何，我都希望你能一直开心，未来无惧，前程可期。</span><br>
 						<span class="say"></span><br>
-                        <span class="say"><span class="space"></span> -- 爱你的人--</span>
+                        <span class="say"><span class="space"></span> -- 致我心中的宝藏女孩--</span>
 			  		</font>
 			  		</p>
       			</div>
             </div>
 		    <div id="clock-box">
 		        <span class="STYLE1"></span>
-		        <font color="#33CC00">亲爱的小幸运，我喜欢你</font>
+		        <font color="#33CC00">芷君同学，我们认识</font>
 				<span class="STYLE1">已经是……</span>
 		        <div id="clock"></div>
 		    </div>
