--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>致芷君同学的七夕礼物（jQuery+Html5）</title>	    
+	<title>致芷君同学的七夕礼物</title>	    
     <link type="text/css" rel="stylesheet" href="default.css">
 		
 	<script type="text/javascript" src="jquery.min.js"></script>
