--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 			<source src="forgive.mp3"/>
 	</audio>  ==================-->
 	
+	<audio autoplay>
+			<source src="forgive.mp3"/>
+	</audio>
+	
 	
 	<div id="play_btn">
         	<button type="button"></button>
