--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>致芷君同学的七夕礼物</title>	    
+	<title>献给芷君同学的七夕礼物</title>	    
     <link type="text/css" rel="stylesheet" href="default.css">
 		
 	<script type="text/javascript" src="jquery.min.js"></script>
@@ -22,14 +22,7 @@
 	</style>
 </head>
 <body>
-	<!--===音乐：原谅——刘瑞琦====================
-	<audio autoplay>
-			<source src="forgive.mp3"/>
-	</audio>  ==================-->
-	
-	
-	
-	
+	<!--===音乐：童话镇 刘一发====================
 	<div id="play_btn">
         	<button type="button"></button>
         	<audio src="forgive.mp3" loop preload></audio>
@@ -46,7 +39,7 @@
 		      		<font color="#FF0000">  	
 		      				<span class="say">hello,芷君同学：</span><br>
 						<span class="say">虽然，我们认识的时间很短暂</span><br>
-			        		<span class="say">我对你也不不算了解</span><br>
+			        		<span class="say">我对你也不算了解</span><br>
 						<span class="say">甚至没有见过你本人</span><br>
 						<span class="say">但是，你幽默、风趣、积极、活泼的性格还是深深的吸引了我</span><br>
 						<span class="say">无论将来如何，我都希望你能一直开心，未来无惧，前程可期，加油！</span><br>
@@ -62,7 +55,7 @@
 				<span class="STYLE1">已经是……</span>
 		        <div id="clock"></div>
 		    </div>
-		    <canvas id="canvas" width="1100" height="680"></canvas>
+		    <canvas id="canvas" width="1100" ></canvas>
 	    </div>
             
     </div>
