--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 	</style>
 </head>
 <body>
-	<!--===音乐：童话镇 刘一发====================
+	<!--===音乐：童话镇 刘一发====================-->
+
 	<div id="play_btn">
         	<button type="button"></button>
         	<audio src="forgive.mp3" loop preload></audio>
    	 </div>
-	
-	<!--==============================================================-->
 	<div id="main">
         <div id="error">
         	抱歉！目前您的浏览器无法显示，请更新至最新版本或使用其他主流浏览器，谢谢合作。
