--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="play_btn">
         <button type="button"></button>
-        <audio src="forgive.mp3" loop preload></audio>
+        <audio id = "audio" src="forgive.mp3" loop preload></audio>
     </div>
 
     <div id="error">
