--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <div id="main">
 
     <div id="play_btn">
-        <button type="button"></button>
-        <audio id = "audio" src="forgive.mp3" loop preload></audio>
+        <audio  src="forgive.mp3" loop preload></audio>
     </div>
 
     <div id="error">
