--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span class="say">我对你也不算了解</span><br>
                     <span class="say">甚至没有见过你本人</span><br>
                     <span class="say">但是，你幽默、风趣、积极、活泼的性格还是深深的吸引了我</span><br>
-                    <span class="say">无论将来如何，我都希望你能一直开心，未来无惧，前程可期，加油！</span><br>
+                    <span class="say">无论将来如何，我都希望你能一直开心，前程无惧，未来可期，加油！</span><br>
                     <span class="say"></span><br>
                     <span class="say"><span class="space"></span> -- 致我心中的宝藏女孩--</span>
                 </font>
