--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>献给芷君同学的七夕礼物</title>
     <link type="text/css" rel="stylesheet" href="default.css">
-
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="jscex.min.js"></script>
     <script type="text/javascript" src="jscex-parser.js"></script>
