--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="main">
 
     <div id="play_btn">
-        <audio  src="forgive.mp3" loop preload></audio>
+        <audio id = "audio1" src="forgive.mp3" loop preload></audio>
     </div>
 
     <div id="error">
@@ -67,7 +67,7 @@
 <script>
 	document.addEventListener('DOMContentLoaded', function () {
 		function audioAutoPlay() {
-			var audio = document.getElementById('audio');
+			var audio = document.getElementById('audio1');
 			audio.play();
 			document.addEventListener("WeixinJSBridgeReady", function () {
 				audio.play();
@@ -78,7 +78,7 @@
 	//--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
 	document.addEventListener('touchstart', function () {
 		function audioAutoPlay() {
-			var audio = document.getElementById('audio');
+			var audio = document.getElementById('audio1');
 			audio.play();
 		}
 		audioAutoPlay();
