--- a/index.html
+++ b/index.html
@@ -65,26 +65,60 @@
 
 <!--==========================================================-->
 <script>
-	document.addEventListener('DOMContentLoaded', function () {
-		function audioAutoPlay() {
-			var audio = document.getElementById('audio1');
-			audio.play();
-			document.addEventListener("WeixinJSBridgeReady", function () {
-				audio.play();
-			}, false);
-		}
-		audioAutoPlay();
-	});
-	//--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
-	document.addEventListener('touchstart', function () {
-		function audioAutoPlay() {
-			var audio = document.getElementById('audio1');
-			audio.play();
-		}
-		audioAutoPlay();
-	});
+	function autoPlayMusic() {   
+
+    /* 自动播放音乐效果，解决浏览器或者APP自动播放问题 */   
+
+    function musicInBrowserHandler() {   
+
+        musicPlay(true);   
+
+        document.body.removeEventListener('touchstart', musicInBrowserHandler);   
+
+    }   
+
+    document.body.addEventListener('touchstart', musicInBrowserHandler);   
+
+    /* 自动播放音乐效果，解决微信自动播放问题 */   
+
+    function musicInWeixinHandler() {   
+
+        musicPlay(true);   
+
+        document.addEventListener("WeixinJSBridgeReady", function () {   
+
+            musicPlay(true);   
+
+        }, false);   
+
+        document.removeEventListener('DOMContentLoaded', musicInWeixinHandler);   
+
+    }   
+
+    document.addEventListener('DOMContentLoaded', musicInWeixinHandler);   
+
+}   
+
+function musicPlay(isPlay) {   
+
+    var media = document.getElementById('myMusic');   
+
+    if (isPlay && media.paused) {   
+
+        media.play();   
+
+    }   
+
+    if (!isPlay && !media.paused) {   
+
+        media.pause();   
+
+    } 
 
     (function () {
+	    
+	  autoPlayMusic();   
+	    
         var canvas = $('#canvas');
         if (!canvas[0].getContext) {
             $("#error").show();
