--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 function musicPlay(isPlay) {   
 
-    var media = document.getElementById('myMusic');   
+    var media = document.getElementById('audio1');   
 
     if (isPlay && media.paused) {   
 
