--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="main">
 
     <div id="play_btn">
-        <audio id = "audio1" src="forgive.mp3" loop preload></audio>
+        <audio id="audio1" src="forgive.mp3" loop preload></audio>
     </div>
 
     <div id="error">
@@ -65,61 +65,32 @@
 
 <!--==========================================================-->
 <script>
-	function autoPlayMusic() {   
 
-    /* 自动播放音乐效果，解决浏览器或者APP自动播放问题 */   
-
-    function musicInBrowserHandler() {   
-
-        musicPlay(true);   
-
-        document.body.removeEventListener('touchstart', musicInBrowserHandler);   
-
-    }   
-
-    document.body.addEventListener('touchstart', musicInBrowserHandler);   
-
-    /* 自动播放音乐效果，解决微信自动播放问题 */   
-
-    function musicInWeixinHandler() {   
-
-        musicPlay(true);   
-
-        document.addEventListener("WeixinJSBridgeReady", function () {   
-
-            musicPlay(true);   
-
-        }, false);   
-
-        document.removeEventListener('DOMContentLoaded', musicInWeixinHandler);   
-
-    }   
-
-    document.addEventListener('DOMContentLoaded', musicInWeixinHandler);   
-
-}   
-
-function musicPlay(isPlay) {   
-
-    var media = document.getElementById('audio1');   
-
-    if (isPlay && media.paused) {   
-
-        media.play();   
-
-    }   
-
-    if (!isPlay && !media.paused) {   
-
-        media.pause();   
-
-    } 
-}
 
     (function () {
-	    
-	  autoPlayMusic();   
-	    
+        Window.onload = function () {
+            autoPlayAudio();
+
+        }
+
+
+	function  autoPlayAudio()
+        {
+            var audioPlay = document.getElementById("audio1");
+
+            Wx.config({
+//配置信息，可无
+
+            });
+
+            wx.ready(function () {
+                audioPlay.play();
+
+            });
+
+        }
+
+
         var canvas = $('#canvas');
         if (!canvas[0].getContext) {
             $("#error").show();
