--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
 
 <div id="main">
 
-    <div id="play_btn">
-        <audio id="audio1" src="forgive.mp3" loop preload></audio>
-    </div>
+   <audio id="audio1" autoplay="false" preload="metadata"></audio>
 
     <div id="error">
         抱歉！目前您的浏览器无法显示，请更新至最新版本或使用其他主流浏览器，谢谢合作。
