--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
 <div id="main">
 
-   <audio id="audio1" autoplay="false" preload="metadata"></audio>
+   <audio id="audio1" src = "forgive .mp3" autoplay="false" preload="metadata"></audio>
+	
+
 
     <div id="error">
         抱歉！目前您的浏览器无法显示，请更新至最新版本或使用其他主流浏览器，谢谢合作。
