--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <div id="main">
 
 <audio hidden="hidden" id="audio">
-        <source src="forgive.mp3" type="audio/mp3">
-        <embed height="50px" width="100px" src="forgive.mp3">
+        <source src="forgive.mp3">
     </audio>
 
 
