--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ wx.config({
 	                vid.play();// 这个就是播放
 	            }
 	            start++;//循环
-	            start == times && vid.pause();//也就是当循环的变量等于次数的时候，就会终止循环并且关掉音频
+	            false;//也就是当循环的变量等于次数的时候，就会终止循环并且关掉音频
 	        });
 	    }
 
