--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                     <span class="say">但是，你幽默、风趣、积极、活泼的性格还是深深的吸引了我</span><br>
                     <span class="say">无论将来如何，我都希望你能一直开心，前程无惧，未来可期，加油！</span><br>
                     <span class="say"></span><br>
-                    <span class="say"><span class="space"></span> -- 致我心中的宝藏女孩--</span>
+                    <span class="say"><span class="STYLE1"></span> -- 致我心中的宝藏女孩</span>
                 </font>
                 </p>
             </div>
         </div>
         <div id="clock-box">
             <span class="STYLE1"></span>
-            <font color="#33CC00">芷君同学，我们认识</font>
-            <span class="STYLE1">已经是……</span>
+            <font color="#33CC00">纪念我们认识</font>
+            <!--<span class="STYLE1">已经是……</span>-->
             <div id="clock"></div>
         </div>
         <canvas id="canvas" width="1100"></canvas>
