--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 <div id="main">
 
-<audio hidden="hidden" id="audio">
-        <source src="forgive.mp3" type="audio/mp3">
-        <embed height="50px" width="100px" src="forgive.mp3">
-    </audio>
 
+
+    <audio id="audio" autoplay>
+        <source src="forgive.mp3" type="audio/mp3">
+    </audio>
 
 
 
@@ -71,6 +71,13 @@
 
 <!--==========================================================-->
 <script>
+	
+	
+	document.addEventListener('click', musicPlay);
+    function musicPlay() {
+        document.getElementById('audio').play();
+        document.removeEventListener('click', musicPlay);
+    }
 	
 wx.config({
 	        debug: false,
