--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div id="clock-box">
             <span class="STYLE1"></span>
-            <font color="#33CC00">我们认识的时间，</font>
+            <font color="#CC33CC">我们认识的时间，</font>
             <span class="STYLE1">已经是……</span>
             <div id="clock"></div>
         </div>
