--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <span class="say">但是，你幽默、风趣、积极、活泼的性格还是深深的吸引了我</span><br>
                     <span class="say">无论将来如何，我都希望你能一直开心，前程无惧，未来可期，加油！</span><br>
                     <span class="say"></span><br>
-                    <span class="say"><span class="STYLE1"></span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -- 致我心中的宝藏女孩</span>
+                    <span class="say"><span class="STYLE1"></span> -- 致我心中的宝藏女孩</span>
                 </font>
                 </p>
             </div>
