--- a/index.html
+++ b/index.html
@@ -75,48 +75,31 @@
 	
 	
 	
-wx.config({
-	        debug: false,
-	        appId: 'wxcee5eba3aba35e35',
-	        timestamp: 1559524606,
-	        nonceStr: 'fd6e1bfe6ead430db24a9bba4afbbc5f',
-	        signature: '7f3c14f2817f58321e7cce1ecc7c682bc4ad95c2',
-	        jsApiList: [
-	            'checkJsApi',
-	            'getLocation'
-	        ]
-	    });
-	    // setTimeout("getLocation()","3000");
-	    wx.ready(function(){
-	    	
-	    });
-    	Orderprocessing();
-    	function autoPlayAudio() {
-	        wx.ready(function() {
-	            // document.getElementById('audio').play();
-	            var vid = document.getElementById("audio");//获取音频对象
-	            vid.play();
-	        });
-	    }
-    	function Orderprocessing(){
-	        var vid = document.getElementById("audio");//获取音频对象
-	        var start = 0;//定义循环的变量
-	        var times=30;//定于循环的次数
-	        autoPlayAudio(vid);
-	        if(vid.paused) {
-	            vid.play();// 这个就是播放
-	        }
-	        vid.addEventListener("ended",function() {
-	            autoPlayAudio(vid);
-	            if(vid.paused)                     {
-	                vid.play();// 这个就是播放
-	            }
-	            start++;//循环
-	            start == times && vid.pause();//也就是当循环的变量等于次数的时候，就会终止循环并且关掉音频
-	        });
-	    }
-
-
+ function autoPlayMusic() { 2     /* 自动播放音乐效果，解决浏览器或者APP自动播放问题 */
+     function musicInBrowserHandler() {
+          musicPlay(true);
+         document.body.removeEventListener('touchstart', musicInBrowserHandler);
+      }
+      document.body.addEventListener('touchstart', musicInBrowserHandler);
+     /* 自动播放音乐效果，解决微信自动播放问题 */
+    function musicInWeixinHandler() {
+        musicPlay(true);
+        document.addEventListener("WeixinJSBridgeReady", function () {
+            musicPlay(true);
+       }, false);
+         document.removeEventListener('DOMContentLoaded', musicInWeixinHandler);
+    }
+    document.addEventListener('DOMContentLoaded', musicInWeixinHandler);
+}
+ function musicPlay(isPlay) {
+   var media = document.getElementById('audio');
+     if (isPlay && media.paused) {
+       media.play();
+     }
+    if (!isPlay && !media.paused) {
+        media.pause();
+     }
+ }
 
 	
     (function () {
