--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 
 
 
-    <audio id="audio" autoplay>
-        <source src="forgive.mp3" type="audio/mp3">
-    </audio>
+    
 
 
 
@@ -56,6 +54,9 @@
                 </font>
                 </p>
             </div>
+	    <audio id="audio"  controls="controls" autoplay>
+        <source src="forgive.mp3" type="audio/mp3">
+    </audio>
         </div>
         <div id="clock-box">
             <span class="STYLE1"></span>
