--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     
 
- <audio id="audio"  controls="controls" autoplay>
+ <audio id="audio"   autoplay>
         <source src="forgive.mp3" type="audio/mp3">
     </audio>
 
