--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@ document.addEventListener('touchstart', function () {
         var hold = 1;
 
         canvas.click(function (e) {
+		debugger;
+		  var audio = document.getElementById('audio');
+            audio.play();
             var offset = canvas.offset(), x, y;
             x = e.pageX - offset.left;
             y = e.pageY - offset.top;
