--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     
 
- <audio id="audio"   autoplay>
+ <audio id="audio" loop="loop"   autoplay>
         <source src="forgive.mp3" type="audio/mp3">
     </audio>
 
@@ -73,49 +73,9 @@
 <!--==========================================================-->
 <script>
 	
-	
-	
-	
-//--创建页面监听，等待微信端页面加载完毕 触发音频播放
-document.addEventListener('DOMContentLoaded', function () {
-    function audioAutoPlay() {
-        var audio = document.getElementById('audio');
-            audio.play();
-        document.addEventListener("WeixinJSBridgeReady", function () {
-            audio.play();
-        }, false);
-    }
-    audioAutoPlay();
-});
-//--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
-document.addEventListener('touchstart', function () {
-    function audioAutoPlay() {
-        var audio = document.getElementById('audio');
-            audio.play();
-    }
-    audioAutoPlay();
-});
-	
-	function autoPlayVideo(){
-            wx.config({
-                debug:false,
-                appId:"",
-                timestamp:1,
-                nonceStr:"",
-                signature:"",
-                jsApiList:[]
-            });
-            wx.ready(function(){
-                var autoplayVideo=document.getElementById("audio");
-                autoplayVideo.play()
-            })
-        };
-        autoPlayVideo();
-
-	
+		
     (function () {
-	    debugger;
-	 document.getElementById('audio').play();   
+	   
 	
         var canvas = $('#canvas');
         if (!canvas[0].getContext) {
